--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,14 +8,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/loginbackground"
+        android:background="@drawable/register_activity_background_image"
         android:orientation="vertical">
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="50sp"
             android:textAlignment="center"
-            android:text="Login"
+            android:text="Register"
             android:layout_marginTop="40dp"
             android:textColor="@color/colorWhite"
             android:fontFamily="cursive"/>
@@ -45,16 +45,19 @@
             android:inputType="textPassword"
             android:background="@drawable/rounded_edittext"
             />
-        <Button
+        <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:text="Login"
-            android:id="@+id/submit"
+            android:hint="confirm password"
+            android:id="@+id/confirmPassword"
+            android:padding="5dp"
             android:layout_marginTop="30dp"
-            android:layout_marginRight="50dp"
-            android:layout_marginLeft="50dp"
-            android:background="@color/colorWhite"/>
+            android:layout_marginRight="10dp"
+            android:layout_marginLeft="10dp"
+            android:inputType="textPassword"
+            android:background="@drawable/rounded_edittext"
+            />
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
