--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -55,16 +54,34 @@
             android:layout_marginRight="50dp"
             android:layout_marginLeft="50dp"
             android:background="@color/colorWhite"/>
-        <Button
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:text="Register"
-            android:id="@+id/register"
-            android:layout_marginTop="30dp"
-            android:layout_marginRight="50dp"
-            android:layout_marginLeft="50dp"
-            android:background="@color/colorWhite"/>
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Register"
+                android:id="@+id/register"
+                android:textColor="@color/colorWhite"
+                android:textSize="20sp"
+                android:layout_marginTop="30dp"
+                android:layout_marginLeft="10dp"/>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="Forgot password"
+                android:id="@+id/forgotPassword"
+                android:textColor="@color/colorWhite"
+                android:textSize="20sp"
+                android:gravity="end"
+                android:textAlignment="viewEnd"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="30dp"/>
+
+        </LinearLayout>
 
     </LinearLayout>
 
