add plant and adding plant to db

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,7 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:hint="email address"
+            android:hint="@string/login_email"
             android:id="@+id/email"
             android:layout_marginTop="100dp"
             android:layout_marginRight="10dp"
@@ -35,7 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:hint="password"
+            android:hint="@string/login_password"
             android:id="@+id/password"
             android:padding="5dp"
             android:layout_marginTop="30dp"
@@ -48,7 +48,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:text="Login"
+            android:text="@string/login_submit_button"
             android:id="@+id/submit"
             android:layout_marginTop="30dp"
             android:layout_marginRight="50dp"
@@ -62,23 +62,25 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Register"
+                android:text="@string/login_register"
                 android:id="@+id/register"
                 android:textColor="@color/colorWhite"
                 android:textSize="20sp"
                 android:layout_marginTop="30dp"
-                android:layout_marginLeft="10dp"/>
+                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"/>
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Forgot password"
+                android:text="@string/login_forgot_password"
                 android:id="@+id/forgotPassword"
                 android:textColor="@color/colorWhite"
                 android:textSize="20sp"
                 android:gravity="end"
                 android:textAlignment="viewEnd"
                 android:layout_marginRight="10dp"
+                android:layout_marginEnd="10dp"
                 android:layout_marginTop="30dp"/>
 
         </LinearLayout>
