--- a/app/src/main/res/layout/activity_add_plant.xml
+++ b/app/src/main/res/layout/activity_add_plant.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddPlant">
+    tools:context=".AddPictureToPlant">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -24,14 +24,14 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Choose from Gallery"
+                android:text="@string/pic_choose_from_gallery"
                 android:id="@+id/chooseFromGalleryButton"
                 />
             <Button
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Take Picture"
+                android:text="@string/pic_take_picture"
                 android:id="@+id/takePictureButton"
                 />
         </LinearLayout>
@@ -43,14 +43,14 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Save Image(s)"
+                android:text="@string/pic_save_image"
                 android:id="@+id/saveImages"
                 />
             <Button
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Cancel"
+                android:text="@string/cancel"
                 android:id="@+id/cancel"
                 />
         </LinearLayout>
