--- a/app/src/main/res/layout/activity_single_plant.xml
+++ b/app/src/main/res/layout/activity_single_plant.xml
@@ -27,29 +27,58 @@
             android:layout_marginTop="10dp"
             android:textColor="@color/colorWhite"
             />
-        <ImageView
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="180dp"
-            android:layout_marginTop="30sp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:id="@+id/single_images"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="20sp"
+            android:padding="10dp">
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.1"
+                android:layout_gravity="center"
+                android:background="@drawable/left_arrow"
+                android:id="@+id/single_scroll_left"/>
+
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="200dp"
+                android:id="@+id/single_images"
+                android:layout_gravity="center"
+                android:layout_weight="0.6"
             />
-        <TextView
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.1"
+                android:layout_gravity="center"
+                android:background="@drawable/right_arrow"
+                android:id="@+id/single_scroll_right"/>
+        </LinearLayout>
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/picture_date"
-            android:textColor="@color/colorWhite"/>
-        <Button
+            android:orientation="horizontal"
+            >
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="0.4"
+                android:layout_height="wrap_content"
+                android:id="@+id/picture_date"
+                android:textSize="20sp"
+                android:textColor="@color/colorWhite"/>
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.1"
+                android:id="@+id/single_add_pic_icon"
+                android:background="@drawable/plus_icon"/>
+        </LinearLayout>
+        <DatePicker
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/single_add_picture"
-            android:layout_marginTop="10dp"
-            android:id="@+id/single_add_pic"
-            android:layout_marginRight="20sp"
-            android:layout_marginLeft="20sp"
-            android:textSize="15sp"
-            android:background="@drawable/rounded_edittext"/>
+            android:layout_height="wrap_content"></DatePicker>
     </LinearLayout>
     </ScrollView>
 
