--- a/app/src/main/res/layout/all_plants.xml
+++ b/app/src/main/res/layout/all_plants.xml
@@ -1,55 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    card_view:cardCornerRadius="0dp"
-    card_view:cardElevation="3dp"
-    android:layout_marginBottom="10dp"
-    android:layout_marginRight="30dp"
-    android:layout_marginLeft="30dp"
-    android:layout_marginTop="10dp"
-    card_view:cardBackgroundColor="@color/colorPrimary">
-    <androidx.cardview.widget.CardView
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/card_view"
+    android:layout_marginTop="6dp"
+    android:layout_marginBottom="6dp"
+    android:layout_marginLeft="6dp"
+    android:layout_marginRight="6dp"
+    android:layout_gravity="center"
+    app:layout_anchorGravity="center"
+    app:cardCornerRadius="@android:dimen/notification_large_icon_height"
+    app:cardElevation="0dp"
+    app:cardMaxElevation="0dp">
+    >
+    <ImageView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/card_view"
-        android:layout_marginTop="6dp"
-        android:layout_marginBottom="6dp"
-        android:layout_marginLeft="6dp"
-        android:layout_marginRight="6dp"
-        card_view:cardElevation="1dp"
-        card_view:cardCornerRadius="5dp"
-        card_view:contentPadding="10dp"
-        >
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:id="@+id/cardview_avatar"
+        android:scaleType="fitXY"/>
+
                 <TextView
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_width="wrap_content"
+                    android:layout_height="30dp"
                     android:layout_marginBottom="10dp"
                     android:textSize="16sp"
                     android:textStyle="bold"
-                    android:layout_weight="0.7"
-                    android:text="blabla"
                     android:fontFamily="sans-serif-black"
+                    android:textColor="@color/colorWhite"
                     android:id="@+id/cardview_plant_name"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="10dp"/>
-                <ImageView
-                    android:layout_width="0dp"
-                    android:layout_height="100dp"
-                    android:layout_marginLeft="50dp"
+                    android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
-                    android:layout_weight="0.3"
-                    android:id="@+id/cardview_avatar"
-                    android:layout_gravity="end" />
-
-            </LinearLayout>
+                    android:layout_gravity="center"/>
 
 
 
-    </androidx.cardview.widget.CardView>
 </androidx.cardview.widget.CardView>
