--- a/app/src/main/res/layout/activity_add_plant2.xml
+++ b/app/src/main/res/layout/activity_add_plant2.xml
@@ -28,6 +28,7 @@
             android:layout_marginBottom="30sp"
             android:textColor="@color/colorWhite"
             android:textStyle="bold"
+            android:id="@+id/plant_title"
             android:layout_gravity="center"
             android:gravity="center"/>
 
