--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,15 @@
         android:orientation="vertical"
         app:layout_constraintTop_toTopOf="parent"
         >
+        <androidx.appcompat.widget.SearchView
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:id="@+id/searchBar"
+            android:padding="10dp"
+            android:layout_margin="5dp"
+            app:queryHint="@string/search_hint"
+            app:queryBackground="@color/colorWhite"/>
+
 
     <Button
         android:layout_width="match_parent"
@@ -42,7 +51,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical"
-        android:layout_marginTop="100sp"
+        android:layout_marginTop="150sp"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
