--- a/app/src/main/res/layout/activity_single_plant.xml
+++ b/app/src/main/res/layout/activity_single_plant.xml
@@ -28,6 +28,12 @@
             android:layout_marginTop="10dp"
             android:textColor="@color/colorWhite"
             />
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/single_gallery_button"
+            android:text="@string/single_gallery"
+            android:background="@drawable/rounded_edittext"/>
 
         <LinearLayout
             android:layout_width="match_parent"
