--- a/app/src/main/res/layout/activity_add_plant2.xml
+++ b/app/src/main/res/layout/activity_add_plant2.xml
@@ -195,6 +195,36 @@
             </RadioGroup>
             </LinearLayout>
         </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1.3"
+                    android:layout_marginLeft="10sp"
+                    android:layout_marginRight="10sp"
+                    android:layout_marginBottom="30sp"
+                    android:textSize="16sp"
+                    android:background="@drawable/rounded_edittext"
+                    android:padding="5dp"
+                    android:text="@string/plant_change_date_added"
+                    />
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.7"
+                    android:layout_marginLeft="10sp"
+                    android:layout_marginRight="10sp"
+                    android:layout_marginBottom="30sp"
+                    android:textSize="16sp"
+                    android:background="@drawable/rounded_edittext"
+                    android:padding="5dp"
+                    android:id="@+id/change_date_added"
+                    />
+            </LinearLayout>
+
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
