plant ID fixed, checkbox for tasks

--- a/app/src/main/res/layout/task_list.xml
+++ b/app/src/main/res/layout/task_list.xml
@@ -27,6 +27,13 @@
                 android:layout_weight="1"
                 android:id="@+id/cardview_task_action"
                 />
+            <CheckBox
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.3"
+                android:gravity="end"
+                android:layout_gravity="end"
+                android:id="@+id/cardview_task_check_task"/>
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
