--- a/app/src/main/res/layout/activity_dash_board.xml
+++ b/app/src/main/res/layout/activity_dash_board.xml
@@ -14,7 +14,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
         <androidx.appcompat.widget.SearchView
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
@@ -33,7 +34,8 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            >
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -48,7 +50,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id="@+id/todays_forecast_plus_minus"
-                    android:text="+"/>
+                    android:text="@string/plus"/>
             </LinearLayout>
             <com.github.aakira.expandablelayout.ExpandableRelativeLayout
                 android:layout_width="match_parent"
@@ -148,7 +150,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="+"
+                    android:text="@string/plus"
                     android:id="@+id/tomorrows_forecast_plus_minus"/>
             </LinearLayout>
             <com.github.aakira.expandablelayout.ExpandableRelativeLayout
@@ -265,6 +267,12 @@
             android:layout_height="wrap_content"
             android:id="@+id/task_tomorrow_recycler_view">
         </androidx.recyclerview.widget.RecyclerView>
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:src="@drawable/settings_icon_menu" />
     </LinearLayout>
 </androidx.core.widget.NestedScrollView>
     </LinearLayout>
