--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,6 +21,12 @@
             android:layout_margin="5dp"
             app:queryHint="@string/search_hint"
             app:queryBackground="@color/colorWhite"/>
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/fab_sort_by"
+            android:src="@drawable/sort_by"
+            />
 
 
     <Button
@@ -43,15 +49,15 @@
             android:layout_gravity="center"
             android:textAlignment="center"
             android:textColor="@color/colorWhite"/>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/my_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbars="vertical"
+            />
     </LinearLayout>
 
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/my_recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scrollbars="vertical"
-        android:layout_marginTop="150sp"
-        />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
