--- a/app/src/main/res/layout/activity_gallery.xml
+++ b/app/src/main/res/layout/activity_gallery.xml
@@ -9,6 +9,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent">
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/gallery_empty"
+            android:visibility="invisible"
+            android:id="@+id/empty_gallery"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
