--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -15,7 +15,7 @@
   -->
 <androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <PreferenceCategory app:title="@string/sync_header">
+    <PreferenceCategory app:title="@string/wind_header">
 
 
 
@@ -27,15 +27,17 @@
             app:title="@string/wind_title"
             app:useSimpleSummaryProvider="true" />
     </PreferenceCategory>
-    <PreferenceCategory app:title="@string/sync_header">
+    <PreferenceCategory app:title="@string/temp_header">
 
-    <ListPreference
+        <ListPreference
             app:defaultValue="0"
             app:entries="@array/temp_entries"
             app:entryValues="@array/temp_values"
             app:key="temperature"
             app:title="@string/temp_title"
             app:useSimpleSummaryProvider="true" />
+    </PreferenceCategory>
+    <PreferenceCategory app:title="@string/notification_header">
         <ListPreference
             app:defaultValue="11"
             app:entries="@array/notification_time_hour_entries"
