--- a/app/src/main/res/layout/single_plant_gallery.xml
+++ b/app/src/main/res/layout/single_plant_gallery.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -17,7 +16,8 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/gallery_image"/>
+            android:id="@+id/gallery_image"
+            android:contentDescription="@string/plant_image_content_description"/>
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
