--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,7 +14,7 @@
             android:layout_height="wrap_content"
             android:textSize="50sp"
             android:textAlignment="center"
-            android:text="Register"
+            android:text="@string/register"
             android:layout_marginTop="40dp"
             android:textColor="@color/colorWhite"
             android:fontFamily="cursive"/>
@@ -23,7 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:hint="email address"
+            android:hint="@string/login_email"
             android:id="@+id/email"
             android:layout_marginTop="100dp"
             android:layout_marginRight="10dp"
@@ -36,7 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:hint="password"
+            android:hint="@string/login_password"
             android:id="@+id/password"
             android:padding="5dp"
             android:layout_marginTop="30dp"
@@ -49,7 +48,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:hint="confirm password"
+            android:hint="@string/confirm_password"
             android:id="@+id/confirmPassword"
             android:padding="5dp"
             android:layout_marginTop="30dp"
@@ -62,7 +61,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:text="Register"
+            android:text="@string/register"
             android:id="@+id/register"
             android:layout_marginTop="30dp"
             android:layout_marginRight="50dp"
