--- a/app/src/main/res/layout/dialog_layout.xml
+++ b/app/src/main/res/layout/dialog_layout.xml
@@ -3,13 +3,9 @@
     android:id="@+id/image_dialog_root"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@android:color/transparent"
+    android:background="@android:color/white"
     android:gravity = "center">
 
-<LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
@@ -20,6 +16,7 @@
         android:id="@+id/your_image"
         android:layout_width="300dp"
         android:layout_height="300dp"
+        android:contentDescription="@string/plant_image_content_description"
         />
     <Button
         android:layout_width="match_parent"
@@ -28,5 +25,4 @@
         android:id="@+id/delete_pic"
         android:background="@drawable/rounded_edittext"
         />
-</LinearLayout>
 </FrameLayout>
